# murali

./: .gitignore  .tmp_probe_expr.tex  Cargo.toml  README.md  RELEASE.md  ROADMAP_initial.md  check.md  export_all.sh  murali.toml.example  preview_all.sh
.github/workflows/: deploy.yml
assets/code_themes/: murali_dark.tmTheme  murali_light.tmTheme
docs/: SECTOR_FILL_IMPLEMENTATION.md  TERMINOLOGY.md  agentic-flow-animation-improvements.md  agentic-flow-node-animations.md  code-architecture-2.md  code-architecture.md  definition-of-done-v1.md  docusaurus.config.ts  eca-based-architecture-2.md  ecs-based-architecture.md  export-and-templates.md  issues.md  package-lock.json  parametric-surface-implementation.md  parametric-surface-wireframe-guide.md  requirements.md  sidebars.ts  stepwise-implementation.md  stepwise.md  text-setup.md  text-write-effect-guide.md  traced-path-guide.md  updater-system-guide.md
docs/blog/: 2025-04-19-murali-0-1-0.md  2026-04-19-murali-0-1-4.md  2026-04-25-murali-0-1-6.md  authors.yml  tags.yml
docs/docs/: animations.md  camera.md  coordinate-system.md  export-and-capture.md  installation.md  intro.md  intro.mdx  latex-and-text.md  roadmap.md  scene-and-app.md  useful-features.mdx
docs/static/: CNAME
docs/versioned_sidebars/: version-0.0.1-sidebars.json  version-0.0.2-sidebars.json  version-0.1.4-sidebars.json  version-0.1.5-sidebars.json  version-0.1.6-sidebars.json
examples/: CONSOLIDATION_PLAN.md  README.md  agentic_flow_chart.rs  agentic_flow_with_neural_node.rs  agentic_flow_write_animation.rs  agentic_reveal_showcase.rs  ai_teaching_showcase.rs  aiu_attention_template.rs  animated_motion.rs  animation_parity.rs  arrow_showcase.rs  axes_and_labels.rs  bezier_showcase.rs  blog_showcase.rs  code_blocks.rs  curves_3d.rs  equation_and_matrix_animation.rs  export_aiu_attention.rs  force_field_multiple_charges.rs  force_field_with_updaters.rs  force_fields.rs  formula_morph_showcase.rs  fourier_formula_trace.rs  graph_draw_3d_camera.rs  graph_on_axes.rs  graphs_2d.rs  hello_shapes.rs  latex_and_typst.rs  latex_showcase.rs  layout_and_groups.rs  layout_playground.rs  manim_sector_fill_demo.rs  map_projection_morph.rs  morph_and_move.rs  morph_showcase.rs  motion_basics.rs  murali_logo.rs  murali_logo_transparent.rs  neural_network_v2.rs  neural_networks.rs  (+42 more)
examples/basics/: styling_showcase.rs
implementation/: concrete-implementation-plan.md  status-and-next-steps.md
md_guides/: WRITE_UNWRITE_BEHAVIOR.md  architecture.md  earth-torus-morphing-guide.md  manim-style-write-effect.md  parametric-surface-animated-wireframe.md  parametric-surface-guide.md  parametric-surface-quick-start.md  table-implementation.md  text-reveal-effects-guide.md  vector-fields-and-streamlines-guide.md  write-effect-fix.md  write-effect-guide.md
optimization/: GPU_PARALLELIZATION_OPPORTUNITIES.md  MANIM_FEATURE_COMPARISON.md  TEXT_RENDERING_OPTIMIZATION.md
scripts/: run_all_examples.sh
src/: app.rs  lib.rs  main.rs  palette.rs  positions.rs  prelude.rs  transform.rs
(+329 files in other folders)
